@@ -1,29 +1,34 @@
 package com.jumpstart.food_ordering_system.service;
 
 import com.jumpstart.food_ordering_system.dto.MenuDto;
-import com.jumpstart.food_ordering_system.exception.ResourceNotFoundException; // Adjust if your class is named NotFoundException
-import com.jumpstart.food_ordering_system.model.Category;
-import com.jumpstart.food_ordering_system.model.Menu;
-import com.jumpstart.food_ordering_system.repository.CategoryRepository;
+import com.jumpstart.food_ordering_system.entity.Category;
+import com.jumpstart.food_ordering_system.entity.Menu;
 import com.jumpstart.food_ordering_system.repository.MenuRepository;
-import lombok.RequiredArgsConstructor;
+import com.jumpstart.food_ordering_system.repository.CategoryRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class MenuServiceImpl implements MenuService {
 
     private final MenuRepository menuRepository;
     private final CategoryRepository categoryRepository;
 
-    @Override
-    public MenuDto createMenu(MenuDto dto) {
-        Category category = categoryRepository.findById(dto.getCategoryId())
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + dto.getCategoryId()));
+    @Autowired
+    public MenuServiceImpl(MenuRepository menuRepository, CategoryRepository categoryRepository) {
+        this.menuRepository = menuRepository;
+        this.categoryRepository = categoryRepository;
+    }
 
-        Menu menu = mapToEntity(dto, category);
+    @Override
+    public MenuDto createMenu(MenuDto menuDto) {
+        Category category = categoryRepository.findById(menuDto.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found with id: " + menuDto.getCategoryId()));
+
+        Menu menu = mapToEntity(menuDto, category);
         Menu savedMenu = menuRepository.save(menu);
         return mapToDto(savedMenu);
     }
@@ -32,23 +37,22 @@ public class MenuServiceImpl implements MenuService {
     public List<MenuDto> getAllMenus() {
         return menuRepository.findAll().stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public MenuDto getMenuById(Long id) {
         Menu menu = menuRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Menu not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException("Menu item not found with id: " + id));
         return mapToDto(menu);
     }
 
-    // Helper method: Map Entity to DTO
     private MenuDto mapToDto(Menu menu) {
         MenuDto dto = new MenuDto();
         dto.setId(menu.getId());
         dto.setName(menu.getName());
         dto.setDescription(menu.getDescription());
-        dto.setPrice(menu.getPrice());
+        dto.setPrice(menu.getPrice() != null ? menu.getPrice().doubleValue() : 0.0);
         dto.setImageUrl(menu.getImageUrl());
         if (menu.getCategory() != null) {
             dto.setCategoryId(menu.getCategory().getId());
@@ -56,13 +60,12 @@ public class MenuServiceImpl implements MenuService {
         return dto;
     }
 
-    // Helper method: Map DTO to Entity
     private Menu mapToEntity(MenuDto dto, Category category) {
         Menu menu = new Menu();
         menu.setId(dto.getId());
         menu.setName(dto.getName());
         menu.setDescription(dto.getDescription());
-        menu.setPrice(dto.getPrice());
+        menu.setPrice(dto.getPrice() != null ? java.math.BigDecimal.valueOf(dto.getPrice()) : java.math.BigDecimal.ZERO);
         menu.setImageUrl(dto.getImageUrl());
         menu.setCategory(category);
         return menu;
